# motobox-esp32

./: README.MD  platformio.ini
lib/TInyGSM/: mqtt_client.ino
lib/gps/: L76X.ino  amap.ino
lib/gyro/: gy91.ino
lib/internet/: exmq.ino  iot.ino  mqttx.md  wifi.ino
lib/lvgl/: lv_conf.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lib/ui/images/: ui_img_1743932013.c  ui_img_1753992569.c  ui_img_1869354606.c  ui_img_953604683.c  ui_img_965679087.c  ui_img_ai70_png.c  ui_img_dianliang1_png.c  ui_img_dianliang2_png.c  ui_img_dianliang3_png.c  ui_img_dianliang4_png.c  ui_img_dianliang_png.c  ui_img_direction_png.c  ui_img_haiba_png.c  ui_img_weixing_png.c
lib/ui/screens/: ui_Screen1.c
lib/utils/: L76X.ino  dashboard.ino  gy91.ino  wifi.ino
lib/wifi/: wifi.ino
src/: main.cpp  main.ino  main.ino.cpp
src/core/: ble.ino  dashboard.ino  gps_l76x.ino  gy91.ino  wifi.ino
src/sensor/: L76X.ino  battery.ino  ble.ino  gps_l76x.ino  gy91.ino
src/ui/: ui.c
src/ui/screens/: ui_Screen1.c
test/: test.ino  wifi.ino
