SET(SOURCES screens/ui_Screen1.c
    ui.c
    ui_helpers.c
    images/ui_img_haiba_png.c
    images/ui_img_1869354606.c
    images/ui_img_918429721.c
    images/ui_img_953604683.c
    images/ui_img_lianjie_png.c
    images/ui_img_weixing_png.c
    images/ui_img_direction_png.c
    images/ui_img_dianliang_png.c
    images/ui_img_ai70_png.c
    images/ui_img_965679087.c
    images/ui_img_1753992569.c
    images/ui_img_1743932013.c
    images/ui_img_dianliang3_png.c
    images/ui_img_dianliang4_png.c
    images/ui_img_dianliang2_png.c
    images/ui_img_dianliang1_png.c)

add_library(ui ${SOURCES})
